@@ -95,7 +95,8 @@ operation as <a href="../CoreTypes/filterset.html">filtersets</a>
     <td valign="top">failonerror</td>
      <td valign="top">Log a warning message, but do not stop the
        build, when the file to copy does not exist or one of the nested
-       filesets points to a directory that doesn't exist.
+       filesets points to a directory that doesn't exist or an error occurs
+       while copying.
      </td>
      <td valign="top" align="center">No; defaults to true.</td>
   </tr>
