@@ -80,7 +80,8 @@ to move to the <var>todir</var> directory.</p>
     <td valign="top">failonerror</td>
      <td valign="top">Log a warning message, but do not stop the
        build, when the file to copy does not exist or one of the nested
-       filesets points to a directory that doesn't exist.
+       filesets points to a directory that doesn't exist or an error occurs
+       while moving.
      </td>
      <td valign="top" align="center">No; defaults to true.</td>
   </tr>
